fix(media-queries): incorrect media variables 0 divided by 0 breaks the build, duh

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -9,7 +9,7 @@
   color: colors.$color-rds-white;
   font-size: 16px;
   text-align: center;
-  @include mixins.scale('padding-top', 50px, 70px, map.get(mdc-variables.$breakpoints, 'desktop'));
+  @include mixins.scale('padding-top', 50px, 70px, variables.$medium-screen);
   padding-bottom: 50px;
 
   .container {
@@ -27,32 +27,20 @@
     margin-bottom: 30px;
     padding: 0 30px;
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'tablet')) {
+    @include mixins.break(variables.$small-screen) {
       margin-left: 0;
       margin-right: 0;
       padding: 0;
 
-      @include mixins.scale('margin-right', 20px, 30px, map.get(mdc-variables.$breakpoints, 'desktop'));
+      @include mixins.scale('margin-right', 20px, 30px, variables.$medium-screen);
     }
 
     svg {
       width: 100%;
       max-width: 400px;
 
-      @include mixins.scale(
-        'width',
-        160px,
-        215px,
-        map.get(mdc-variables.$breakpoints, 'tablet'),
-        map.get(mdc-variables.$breakpoints, 'desktop')
-      );
-      @include mixins.scale(
-        'height',
-        40px,
-        65px,
-        map.get(mdc-variables.$breakpoints, 'tablet'),
-        map.get(mdc-variables.$breakpoints, 'desktop')
-      );
+      @include mixins.scale('width', 160px, 215px, variables.$small-screen, variables.$medium-screen);
+      @include mixins.scale('height', 40px, 65px, variables.$small-screen, variables.$medium-screen);
     }
   }
 
@@ -64,7 +52,7 @@
     padding: 0 10px;
     width: 100%;
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+    @include mixins.break(variables.$medium-screen) {
       flex-wrap: nowrap;
       width: auto;
       margin-bottom: 0;
@@ -74,13 +62,13 @@
       width: calc(50% - 20px);
       margin: 10px;
 
-      @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+      @include mixins.break(variables.$medium-screen) {
         width: calc(25% - 20px);
       }
 
-      @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+      @include mixins.break(variables.$medium-screen) {
         width: auto;
-        @include mixins.scale('margin-right', 15px, 30px, map.get(mdc-variables.$breakpoints, 'desktop'));
+        @include mixins.scale('margin-right', 15px, 30px, variables.$medium-screen);
       }
     }
   }
@@ -88,7 +76,7 @@
   .links {
     text-align: center;
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'tablet')) {
+    @include mixins.break(variables.$small-screen) {
       text-align: left;
     }
 
@@ -121,7 +109,7 @@
     }
   }
 
-  @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+  @include mixins.break(variables.$medium-screen) {
     .rds-button-footer {
       margin-left: auto;
     }
@@ -134,9 +122,9 @@
     border: 0;
     background-color: rgba(colors.$color-rds-white, 0.1);
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
-      @include mixins.scale('margin-top', 30px, 50px, map.get(mdc-variables.$breakpoints, 'desktop'));
-      @include mixins.scale('margin-bottom', 30px, 50px, map.get(mdc-variables.$breakpoints, 'desktop'));
+    @include mixins.break(variables.$medium-screen) {
+      @include mixins.scale('margin-top', 30px, 50px, variables.$medium-screen);
+      @include mixins.scale('margin-bottom', 30px, 50px, variables.$medium-screen);
     }
   }
 
@@ -145,13 +133,13 @@
     flex-wrap: wrap;
     width: 100%;
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+    @include mixins.break(variables.$medium-screen) {
       width: auto;
       margin: 0 auto;
       margin-bottom: 20px;
     }
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+    @include mixins.break(variables.$medium-screen) {
       margin: 0;
       margin-right: auto;
       margin-bottom: 0;
@@ -161,14 +149,14 @@
       width: 100%;
       margin-bottom: 20px;
 
-      @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+      @include mixins.break(variables.$medium-screen) {
         width: auto;
         margin-bottom: 0;
       }
     }
 
     br {
-      @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+      @include mixins.break(variables.$medium-screen) {
         display: none;
       }
     }
@@ -180,7 +168,7 @@
       color: colors.$color-rds-white;
       transition: variables.$rds-trans;
 
-      @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+      @include mixins.break(variables.$medium-screen) {
         width: auto;
         display: inline-block;
         margin: 0 10px;
@@ -200,13 +188,13 @@
     width: 100%;
     font-weight: 700;
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+    @include mixins.break(variables.$medium-screen) {
       width: auto;
       margin: 0 auto;
       margin-top: -4px;
     }
 
-    @include mixins.break(map.get(mdc-variables.$breakpoints, 'desktop')) {
+    @include mixins.break(variables.$medium-screen) {
       margin: 0;
     }
 
